Alignment fix for EOI
git-svn-id: https://wush.net/svn/mindalliance@1637 baad322d-9929-0410-88f0-f92e8ff3e1bd

--- a/channels/trunk/src/main/webapp/channels.css
+++ b/channels/trunk/src/main/webapp/channels.css
@@ -795,6 +795,10 @@ div.aspect {
     padding: 0 10px 0 0
 }
 
+.aspect td {
+    vertical-align: top;
+}
+
 .aspect tr.headers th {
     text-align: left;
     font-weight: bold;
